--- a/ObligatorioRia/css/grid.css
+++ b/ObligatorioRia/css/grid.css
@@ -1,194 +1,131 @@
-	.post {
-		margin: 1rem ;
-		border: solid 1px #ddd;
-		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-		/*padding: 0;*/
-		/*overflow: hidden*/
-		height: unset;
-		/*animation*/
-		opacity: 0;
-		visibility: hidden;
-	    /*overflow: auto;*/
-		transition: opacity .6s, visibility .6s;
-		text-align: justify;
-		padding: 1rem 1rem;
-		padding-top: 0;
+.post {
+	margin: 1rem ;
+	border: solid 1px #ddd;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	/*padding: 0;*/
+	/*overflow: hidden*/
+	height: unset;
+	/*animation*/
+	opacity: 0;
+	visibility: hidden;
+	/*overflow: auto;*/
+	transition: opacity .6s, visibility .6s;
+	text-align: justify;
+	padding: 1rem 1rem;
+	padding-top: 0;
 
 
-	}
-
-	.visible { 
-		visibility: visible;
-		opacity: 1;
-	}
-	
-	.content /*h1*/ {
-	  padding: 0 15px;
-	  margin-top: 135px;
-	  width: 100%;
-	}
-	.content /* p */,
-	.sidebar /* p */{
-	  font-family: "BLOKKNeue-Regular";
-	  /*overflow: hidden*/
-	}
-	.sidebar {
-	  /*padding: 20px;*/
-	  width: 100%;
-	  text-align: center;
-	  background-color: #434A54;
-	  color: #fff;
-	}
-	.sidebar h3 {
-	  /*margin: 0;*/
-	}
-	.content,
-	.sidebar {
-	  float: left;
-	}
-
-
-	.sidebar {
-	  position: -webkit-sticky;
-	  position: sticky;
-	  top: 0;
-	  /*overflow: scroll;*/
-	}
-		html, body{
-			/*width: 100%;*/
-			font-size: 100%;
-			padding: 0;
-		}
-		.row:before, .row:after{
-	        content:"";
-	        display: block;
-	        overflow: hidden;
-	        visibility: hidden;
-	        clear:both;
-	        width: 0;
-	        height: 0;
-		}
-		
-		.container{
-			/*width: 960px;*/
-			margin: 0% auto;
-			padding: 0;
-			position: relative;
-			box-sizing: border-box;
-			}
-		.columna, .columnas{
-			display: inline-block;
-			float: left;
-			margin-left: 2%;
-			margin-right: 0%;
-			box-sizing: border-box;
-			/*border-style: solid;*/
-			/*border-color: green;*/
-			position: relative;
-        	/*height: 100vh;         	*/
-        	max-height: 100vh;
-        	/*background: blue;*/
-        	overflow: auto;
-
-		}
-		.columna:first-child, .columnas:first-child{
-			margin-left: 0%;
-		}
-		.seis {
-			width: 15%;
-		}
-		.cinco{
-			width: 83%;
-		}
-		.cuatro{
-			width: 66%;
-		}
-		.tres{
-			width: 49%;
-		}
-		.dos.columna, .dos.columnas{
-			width: 32%;
-		}
-		.una.columna, .una.columnas{
-			width: 100%;
-		}
-		.cuatrocuatro{
-			width: 23.5%;
-		}
-		@media (min-width: 1200px) {			
-		}
-		@media (max-width: 1199px) and (min-width: 992px) {			
-		}
-		@media (max-width: 991px) and (min-width: 768px) {			
-		}
-		@media (min-width: 767px) {			
-		}
-		
-
-
-/*html {
-  box-sizing: border-box;
-}
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-body {
-  background-color: #F5F7FA;
-  line-height: 1.2;
-}
-*/
-.cf:before,
-.cf:after {
-    content: " "; 
-    display: table;
 }
 
-.cf:after {
-    clear: both;
+.visible { 
+	visibility: visible;
+	opacity: 1;
 }
 
-.cf {
-    *zoom: 1;
-}
-.wrapper {
-  width: 100%;
-  max-width: 600px;
-  margin-right: auto;
-  margin-left: auto;
-  margin-top: 60px;
-  margin-bottom: 200px;
+.content /*h1*/ {
+	padding: 0 15px;
+	margin-top: 135px;
+	width: 100%;
 }
 
-		textarea {
-			display: block;
-			width: 99%;
-			margin: 0;
-			border: none;
-			resize: none;
-		}
-		#listaNotas{
-			min-height: 3rem;
-			border: solid 1px #333;
-		}
+html, body{
+	/*width: 100%;*/
+	font-size: 100%;
+	padding: 0;
+}
+.row:before, .row:after{
+	content:"";
+	display: block;
+	overflow: hidden;
+	visibility: hidden;
+	clear:both;
+	width: 0;
+	height: 0;
+}
 
-		#listaNotas, textarea{
-			/*width: 300px;*/
-			/*margin: 1rem auto;*/
-		}
-		button{
-			display: block;
-			/*width: 100px;*/
-			margin-right: 0;
-			margin-left: 85%;
-			border-radius: 4px;
-			border: 1px solid #47618a;
-			background: #71acfc;
-			margin-bottom: .5rem;
-			margin-top: .5rem;
-			padding: 0 1rem;
-			}
+.container{
+	/*width: 960px;*/
+	margin: 0% auto;
+	padding: 0;
+	position: relative;
+	box-sizing: border-box;
+}
+.columna, .columnas{
+	display: inline-block;
+	float: left;
+	margin-left: 2%;
+	margin-right: 0%;
+	box-sizing: border-box;
+	/*border-style: solid;*/
+	/*border-color: green;*/
+	position: relative;
+	/*height: 100vh;         	*/
+	max-height: 100vh;
+	/*background: blue;*/
+	overflow: auto;
 
-		
+}
+.columna:first-child, .columnas:first-child{
+	margin-left: 0%;
+}
+.seis {
+	width: 15%;
+}
+.cinco{
+	width: 83%;
+}
+.cuatro{
+	width: 66%;
+}
+.tres{
+	width: 49%;
+}
+.dos.columna, .dos.columnas{
+	width: 32%;
+}
+.una.columna, .una.columnas{
+	width: 100%;
+}
+.cuatrocuatro{
+	width: 23.5%;
+}
+
+
+
+
+
+
+
+textarea {
+	display: block;
+	width: 99%;
+	margin: 0;
+	border: none;
+	resize: none;
+}
+#listaNotas{
+	min-height: 3rem;
+	border: solid 1px #333;
+}
+
+#listaNotas, textarea{
+	/*width: 300px;*/
+	/*margin: 1rem auto;*/
+}
+button{
+	display: block;
+	/*width: 100px;*/
+	margin-right: 0;
+	margin-left: 85%;
+	border-radius: 4px;
+	border: 1px solid #47618a;
+	background: #71acfc;
+	margin-bottom: .5rem;
+	margin-top: .5rem;
+	padding: 0 1rem;
+}
+
+
 
 
 img {
@@ -208,13 +145,13 @@ h2{
 }
 
 footer {
-    text-align: center;
-    color: #fff;
-    background: #2196f3;
-    position: fixed;
-    height: 4%;
-    bottom: 0;
-    width: 100%;
+	text-align: center;
+	color: #fff;
+	background: #2196f3;
+	position: fixed;
+	height: 4%;
+	bottom: 0;
+	width: 100%;
 }
 
 .nav {
@@ -239,24 +176,30 @@ footer {
 .ocultar {
 	visibility: hidden;
 }
-	
+
 .publicar {
-    text-align: center;
-    font-weight: bold;
-    color: rgba(0,0,0,.5);
-    border: 1.5px solid rgba(227,227,227,1);
+	text-align: center;
+	font-weight: bold;
+	color: rgba(0,0,0,.5);
+	border: 1.5px solid rgba(227,227,227,1);
 }
 
 .footerpublicar {
-    background: rgba(235,235,235,1);
-    border: 1px solid rgba(219,219,219,1);
+	background: rgba(235,235,235,1);
+	border: 1px solid rgba(219,219,219,1);
 }
 
 .boton-cerrar {
-    margin-right: 2%;
-    display: inline-block;
-    margin-left: 98%;
-    padding: 1%;
+	margin-right: 2%;
+	display: inline-block;
+	margin-left: 98%;
+	padding: 1%;
+	background: url("../logos/x.png") no-repeat center;
+	cursor: pointer;
+	background-color: rgba(255,0,0,.65);
+	width: 15px;
+	height: 15px;
+
 }
 .navegacion{
 
@@ -274,11 +217,11 @@ footer {
 	background: #2196f3;
 }
 .circle{
-		height: 10px;
-		width: 10px;
-		border-radius: 5px;
-		background-color: red;
-	}
+	height: 10px;
+	width: 10px;
+	border-radius: 5px;
+	background-color: red;
+}
 .conectado{
 	background-color: green;
 }
@@ -294,7 +237,7 @@ footer {
 	/*display: none;*/
 	display: block;
 	visibility: hidden;
-	float: right;
+	/*float: right;*/
 	position: fixed;
 	bottom: 4%;
 
@@ -304,39 +247,49 @@ footer {
 	padding:	2px;
 	border-radius: 3px;
 	/*height: 100px;*/
-	width: 49%;
+	width: 68%;
 	/*margin-bottom: 3%;*/
 	margin-right: 32%;
-	margin-left: 17%;
+	/*margin-left: 17%;*/
 
 	/*border: solid .5px grey;*/
 	/*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
 
 }
+
+.chatbox:before{
+	clear: both;
+}
 .chatbox .zona-activa {
+	display: inline-block;
 	text-decoration:none;
 	font-size:		16px;
 	color: 			white;
 	background:		#315cde;
 	padding:		.1em 10px;
 	border-radius: 	4px;
-
+	width: 200px;
 	cursor: pointer;
-	display: ruby;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	z-index: 1100;
 }
 .chatbox .visible, .chatbox.visible {
-    display: block;
-    visibility: visible;
+	display: block;
+	visibility: visible;
 }
 .chatbox ul {
-    list-style: none;
-    width: 100%;
-    padding: 0;
-    margin: 4px 0 0 0;
-    max-height: 200px;
-    overflow-y: auto;
-    overflow-x: hidden;
-    /*display: none;*/
+	list-style: none;
+	width: 100%;
+	padding: 0;
+	margin: 4px 0 0 0;
+	/*max-height: 200px;*/
+	overflow-y: auto;
+	overflow-x: hidden;
+	/*display: none;*/
+	position: absolute;
+	bottom: 23px;
 }
 li {
 	text-align: right;
@@ -346,22 +299,57 @@ li {
 	color: white;
 	border-radius: 5px;
 	margin-bottom: 5px;
-    margin-top: 5px;
-    margin-left: 20px;
-    margin-right: 5px;
+	margin-top: 5px;
+	margin-left: 20px;
+	margin-right: 5px;
 
 }
 .contenedorchat{
+	position: relative;
 	display: inline-block;
 	background: white;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	width: 145px;
 	margin: 0 1px;
 	overflow: hidden;
+	float: right;
+	width: 250px;
+	height: 335px;
 
 }
 
 .contenedorchat input{
 	width: 92%;
 	margin: 0px;
+	bottom: 0;
+	position: absolute;
+	left: 3%;
+	right: 3%;
+	border-radius: 5px;
+}
+.contacto{
+	cursor: pointer;
+}
+/*.contacto .cuatro span{
+cursor: pointer;
+}*/
+.cerrarchat{
+	/*position: absolute;*/
+	display: inline-block;
+	background: url("../logos/x.png") no-repeat center;
+	height: 1.5em;
+	width: 30px; 
+	top: 2px;
+	right: 4px;
+	font-size: 16px;
+	cursor: pointer;
+	font-weight: bold;
+}
+@media (min-width: 1200px) {			
+}
+@media (max-width: 1199px) and (min-width: 992px) {			
+}
+@media (max-width: 991px) and (min-width: 768px) {			
+}
+@media (min-width: 767px) {			
 }
